# tauri_app_study

./: .env.development  .env.production  .env.test  README.md  env.d.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
public/: splashscreen.html
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: console.rs  event.rs  main.rs  utils.rs
src/assets/: main.less  var.css
src/axios/: auth.ts  index.ts
src/axios/api/: backBmgAssingRule.ts  backBmgExtraConfigMatter.ts  backBmgMatterCat.ts  bmgBinDing.ts  bmgSituationMaterialAcceptanceKey.ts  matterInfo.ts  matterSituation.ts  situation.ts  taskCount.ts
src/command/: rustCommand.ts  rustEvent.ts
src/components/: ArchorList.vue  HighLevelSearch.vue  ListPageLayout.vue  MatterRule.vue  Menu.vue  SituationConfigDialog.vue
src/hooks/: useDialogConfig.ts  usePageConfig.ts
src/router/: index.ts
src/utils/: asyncPool.ts  download.ts  localforage.ts
src/views/: Home.vue
src/views/AssocationBinding/: AssociationBinding.vue
src/views/Dictionary/: DictionaryList.vue  DictionaryValueList.vue
src/views/DiversionOfMatter/: DiversionOfMatterList.vue
src/views/Matter/: MatterList.vue  OutMatterList.vue
src/views/MatterChange/: MatterChange.vue  MatterChangeDetail.vue  VersionComparison.vue  VersionModification.vue.backup
src/views/MatterDetails/: ApplicationMatter.vue  BasicList.vue  DetailList.vue  HomologyData.vue
src/views/NonPublicMatter/: AddNonPublicMatter.vue  NonPublicMatterList.vue
(+20 files in other folders)
