[package]
name = "tauri-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.1", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "notification-all", "window-unmaximize", "window-start-dragging", "window-show", "window-hide", "window-minimize", "window-close", "window-unminimize", "window-maximize", "shell-open", "http-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
window-shadows = "0.2.2"
ansi_term = "0.12"

[features]
default = ["custom-protocol"]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
